fix: update static file serving and enhance server startup logging

--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "player",
+  "name": "dplayer",
   "version": "1.0.0",
+  "description": "A CLI tool and server to browse and play videos from a folder structure.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "keywords": [
+    "video",
+    "player",
+    "cli",
+    "server",
+    "streaming"
+  ],
+  "bin": {
+    "dplayer": "index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "Prashant Dubey",
+  "license": "MIT",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.18.2",
+    "ejs": "^3.1.9"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.15"
