--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dtplay",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A modern CLI tool and web server to browse and play videos from any folder structure with an elegant UI",
   "main": "index.js",
   "keywords": [
@@ -33,13 +33,15 @@
   },
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "build-css": "tailwindcss -i ./input.css -o ./public/index.css --watch"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "tailwindcss": "^3.4.15"
   },
   "files": [
