--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "build-css": "tailwindcss -i ./input.css -o ./public/index.css --watch"
   },
   "dependencies": {
+    "default-gateway": "^7.2.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   },
