--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "engines": {
     "node": ">=14.0.0"
   },
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
